fixed some html and css

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <div class="row justify-content-center align-items-center">
 
             <div class="col-md-6 me-0">
-              <div class="about-img mt-5 mb-5">
+              <div class="about-img mt-md-5 mb-md-5">
                 <img class="img-fluid" src="image/about-img.jpg" alt="about-me">
               </div>
             </div>
@@ -178,16 +178,16 @@
                 <hr class="hr mb-5">
                 <address>
                   <ul class="list-unstyled list-inline">
-                    <li class="list-inline-item col-4 me-4"> 
+                    <li class="list-inline-item  col-sm-4 mb-md-3 me-3"> 
                       <p>Name: <span>Daniel Smith</span></p>
                     </li>
                     <li class="list-inline-item me-4">
                       <p> Email: <a href="#">daniel@example.com</a></p>
                     </li>
-                    <li class="list-inline-item col-4 mb-3 me-4">
+                    <li class="list-inline-item  col-sm-4 mb-md-3 me-3">
                       <p> Age: <span>21</span></p>
                     </li>
-                    <li class="list-inline-item mb-3">
+                    <li class="list-inline-item mb-md-3">
                       <p>From: <span>Liverpool, United Kingdom</span></p>
                     </li>
                   </ul>
@@ -403,30 +403,6 @@
       <!-- portfolio ends here -->
 
       <!-- client section starts here -->
-      <!-- <section class="client mt-5" id="client" >
-        <div class="container">
-          <div class="row text-center">
-            <div class="col-12 mt-5">
-              <h1 class="hire-title text-white">Testimonials!</h1>
-              <i class="fa-solid fa-quote-right fa-4x text-primary"></i>
-              <p class=" text-white">Daniel did an excellent job, creative, addressing my request and also providing his own graphic insight. Quick and professional. I would highly recommend, and also will use again!
-              
-              <div class="client-img d-flex justify-content-center align-items-center">
-                <img class="img-fluid" src="image/client-1.jpg" alt="client-1">
-                <div class="client-body">
-                  <strong class="text-white nam" >Maria Wilson</strong> 
-                  <p class="text-white ms-1 para">Envato Customer</p>
-                </div>
-              </div>
-
-              
-
-            </div>
-          </div>
-        </div>
-      </section> -->
-
-      <!-- client section starts here -->
       <section class="client mt-5 mb-5" id="client">
         <div id="slider" class="carousel slide" data-bs-ride="carousel">
 
@@ -525,7 +501,7 @@
 
             </div>
             <div class="col-12 col-lg-4 mt-5">
-              <img class="img-fluid" src="image/post-2.jpg" alt="post-1">
+              <img class="img-fluid" src="image/post-2.jpg" alt="post-2">
               <h5 class="mt-2">Take a tour of my office</h5>
               <p class="blog-des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam mollitia ipsam dolorem nemo nulla tempore quo impedit, ullam dolore placeat?</p>
 
@@ -539,7 +515,7 @@
 
             </div>
             <div class="col-12 col-lg-4 mt-5 mb-5">
-              <img class="img-fluid" src="image/post-3.jpg" alt="post-1">
+              <img class="img-fluid" src="image/post-3.jpg" alt="post-3">
               <h5 class="mt-2">How i became a Web Designer</h5>
               <p class="blog-des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam mollitia ipsam dolorem nemo nulla tempore quo impedit, ullam dolore placeat?</p>
 
